Version 2.2.0
--------------------------------------------------------------
7 October 2008
+ Moved javascript into separate file.

1 October 2008
+ Flyout menu added to control panel link.
+ Added function to return control panel link.
+ Updated: javascript/subpanel/, template/subpanel.tpl

10 September 2008
+ Moved controlpanel unregisteration to control panel class.
+ Made some php 5.0 format changes

Version 2.1.6
--------------------------------------------------------------
18 April 2008
+ Changed tab formatting. The a tag is padded to make clickable area
  larger.
+ updated: templates/style.css

Version 2.1.5
--------------------------------------------------------------
26 March 2008
+ Fixed unregister script for branches.
+ A module can force a control panel tab using the second parameter in
  the display function.
+ Commented out the title in the default template so it won't display
  if not used.

Version 2.1.4
--------------------------------------------------------------
12 October 2007
+ Panel::display now includes the options to send content, title, and
  message information to be put in a default template.
+ Updated: templates/default.tpl

Version 2.1.3
--------------------------------------------------------------
21 September 2007
+ Error checks added to control panel class.
+ Developers can now add a link_title to quickSetTabs. This allows the
  user to mouse over tabs to get extended information.

Version 2.1.2
--------------------------------------------------------------
30 August 2007
+ Control panel will now direct a user to login if their session times
  out during panel view.

22 August 2007
+ changed icon image layout a touch to try and make more space.
+ Updated templates/style.css

Version 2.1.1 - 25 July 2007
--------------------------------------------------------------
2 Aug 2007
+ Panel style - changed overflow:auto to hidden

19 July 2007
+ Put Link.php and Tab.php back in to the inc/init.php. They are