@@ -57,10 +57,11 @@ class PHPWS_Panel_Tab {
 
     public function getTitle($noBreak=true)
     {
-        if ($noBreak)
-            return str_replace(' ', '&nbsp;', $this->title);
-        else
-            return $this->title;
+        if ($noBreak) {
+            return str_replace(' ', '&nbsp;', dgettext($this->itemname, $this->title));
+        } else {
+            return dgettext($this->itemname, $this->title);
+        }
     }
 
     public function setLink($link)
