@@ -7,6 +7,4 @@
 PHPWS_Core::initModClass('controlpanel', 'ControlPanel.php');
 PHPWS_Core::initModClass('controlpanel', 'Tab.php');
 PHPWS_Core::initModClass('controlpanel', 'Link.php');
-
-
 ?>
