@@ -1,3 +1,6 @@
+11 December 2008
++ Little hack suggested by Hilmar to allow controlpanel translation.
+
 Version 2.2.0
 --------------------------------------------------------------
 7 October 2008
